# template-wasmcp-cue

./: Cargo.toml  Makefile  README.md  TODO.md  _allSchemas.schema.json  _all_schemas.schema-works.json  _all_schemas.schema.json  _input.schema.json  _mcpTools.json  _output.schema.json  build.rs  config.cue  generation_tool.cue  kappputttt.md  mise.toml  schema.cue  schema_tool.cue  schemas.cue
.wash/: config.yaml
crates/: build-common.rs
crates/c2s/: Cargo.toml
crates/c2s/src/: main.rs
crates/component/: Cargo.toml  _input.schema.json  _output.schema.json  build.rs  schema.cue
crates/component-pet/: Cargo.toml  build.rs
crates/component-pet/src/: lib.rs
crates/component/src/: lib.rs
crates/component/wit/: world.wit
crates/jsonschema-to-wit/: Cargo.toml
crates/jsonschema-to-wit/src/: lib.rs
crates/mcp-server/: Cargo.toml  build.rs
crates/mcp-server-nice-try/: build.rs  test.rs
crates/mcp-server-nice-try/src/: lib.rs  mcp.rs
crates/mcp-server-nice-try/wit/: world.wit
crates/mcp-server/src/: lib.rs
crates/mcp-server/wit/: deps.toml  world.wit
crates/mcp-server/wit/component-client/: world.wit
mcp-test/: Cargo.toml  README.md
mcp-test/src/: lib.rs
mcp-test/wit/: world.wit
src/: implementation.rs  lib.rs  mcp.rs  tool_calls.rs  tools.rs  tools.rs.sosoll
wit/: world.wit
