[package]
name = "acme-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Empty workspace table prevents this package from inheriting
# a parent workspace when created inside another workspace
[workspace]

[dependencies]
wit-bindgen = "0.54.0"
serde_json = "1.0"
typify = "0.6.1"
serde = {version = "1.0.228", features = ["derive"]}
wstd = "0.6.6"
