[workspace]
members = [
    "crates/component",
    "crates/jsonschema-to-wit",
    "crates/mcp-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
jsonschema-to-wit = { path = "crates/jsonschema-to-wit" }
typify = "0.6.1"
wit-bindgen = "0.55.0"
wstd = "0.6.6"
