[package]
name = "acme-app-mcp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Empty workspace table prevents this package from inheriting
# a parent workspace when created inside another workspace
[workspace]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "*", features = ["derive"]}
serde_json = "1.0"
once_cell = "1.21.4"
typify = "0.6.2"
