[package]
name = "acme-mcp"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
jsonschema-to-wit.workspace = true
wit-bindgen.workspace = true
wstd.workspace = true

[build-dependencies]
serde_json.workspace = true
jsonschema-to-wit.workspace = true
